--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "rm -fr ./.cache && parcel build public/index.html ‑‑no‑cache"
   },
   "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^9.0.1",
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.9.5",
