--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,19 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "target": "es2015",
     "module": "commonjs",
     "moduleResolution": "node",
-    "sourceMap": true,
-    "lib": ["dom", "esnext"],
-    "jsx": "react",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "noEmit": true,
+    "target": "es5",
+    "lib": ["esnext", "dom"],
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "baseUrl": "./src",
-    "types": ["./typings.d.ts"]
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "skipLibCheck": true,
+    "rootDir": "src",
+    "outDir": "lib"
   },
-  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "lib"],
+  "include": ["src"]
 }
