--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "u-json-docs",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "author": "uStudio Front-end Crew",
   "repository": {
     "type": "git",
@@ -19,21 +19,24 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.1",
-    "ustudio-ui": "^1.2.1"
+    "@babel/preset-env": "^7.10.2",
+    "json-schema": "^0.2.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "ustudio-ui": "^1.3.0-beta.3"
   },
   "devDependencies": {
-    "regenerator-runtime": "^0.13.5",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@types/styled-components": "^5.0.1",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "@types/styled-components": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "babel-plugin-styled-components": "^1.10.7",
@@ -47,10 +50,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "npm-run-all": "^4.1.5",
-    "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "regenerator-runtime": "^0.13.5",
     "rimraf": "^3.0.2",
     "standard-version": "^7.1.0",
     "styled-components": "^5.1.0",
