--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "strictNullChecks": true,
     "skipLibCheck": true,
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib",
+    "declaration": true,
+    "emitDeclarationOnly": true
   },
   "exclude": ["node_modules", "lib"],
   "include": ["src"]
