--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.10.2",
     "json-schema": "^0.2.5",
     "react": "^16.13.1",
+    "regenerator-runtime": "^0.13.5",
     "react-dom": "^16.13.1",
     "ustudio-ui": "^1.3.0-beta.3"
   },
@@ -51,11 +52,22 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "regenerator-runtime": "^0.13.5",
     "rimraf": "^3.0.2",
     "standard-version": "^7.1.0",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
+  },
+  "lint-staged": {
+    ".": [
+      "yarn lint",
+      "yarn format",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "license": "MIT"
 }
