--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.1",
-    "@babel/preset-env": "^7.10.2",
     "json-schema": "^0.2.5",
-    "react": "^16.13.1",
     "regenerator-runtime": "^0.13.5",
-    "react-dom": "^16.13.1",
     "ustudio-ui": "^1.3.0-beta.3"
   },
   "devDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.10.2",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
@@ -56,6 +56,10 @@
     "standard-version": "^7.1.0",
     "styled-components": "^5.1.0",
     "typescript": "^3.8.3"
+  },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "lint-staged": {
     ".": [
