--- a/package.json
+++ b/package.json
@@ -19,20 +19,21 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.1",
+    "husky": "^4.2.5",
     "json-schema": "^0.2.5",
+    "lint-staged": "^10.2.9",
+    "parcel": "^1.12.4",
     "regenerator-runtime": "^0.13.5",
     "ustudio-ui": "^1.3.0-beta.3"
   },
   "devDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.10.2",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.9.0",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/react": "^16.9.19",
@@ -52,6 +53,8 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
     "standard-version": "^7.1.0",
     "styled-components": "^5.1.0",
